Finished version 1.0 code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="spooktober.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content-container">
+        <div class="title-container">
+            <h1>Yay, its Spooktober!</h1>
+        </div>
+        <img src="/spooky.svg" class="skeleton" alt="Spooky Skeleton">
+        <div class="time-counter">
+            <p>Spooktober ends at:</p>
+            <p id="time"></p>
+        </div>
+        <div class="credits-footer">
+            <p>Illustration by freepik</p>
+            <p>Code by <a href="https://github.com/patrickr66" target="blank">Patryk Rajm</a></p>
+        </div>     
+    </div>
+    </div>
 </body>
 </html>
